<resources>
    <string name="app_name">ArmenianSmsBox</string>

    <string name="navigation_drawer_open">Բացել մենյուն</string>
    <string name="navigation_drawer_close">Փակել մենյուն</string>
    <string name="action_settings">Կարգավորումներ</string>
    <string name="categories">Թեմաներ</string>
    <string name="favorites">Սիրված</string>
    <string name="share">Տարածել</string>
    <string name="app_info">Ծրագրի մասին</string>
</resources>
