<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_sort_24dp"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_app_info"
            android:icon="@drawable/info"
            android:title="@string/app_info" />
    </group>

</menu>
